# OpenSesame

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  MODULE.bazel  README.md  build.gradle  build.zig  gradle.properties  retrieve_headers.sh  settings.gradle  version.gradle  version.properties
.github/: dependabot.yml
.github/workflows/: build_pr.yml  commit.yml  publish_pr.yml  pullrequest.yml  release.yml  report.yml  snapshot.yml  test.yml
annotations/: build.gradle
annotations/src/main/java/: module-info.java
annotations/src/main/java/dev/lukebemish/opensesame/annotations/: Coerce.java  Open.java
build-logic/src/main/groovy/: opensesame.base.gradle  opensesame.conventions.gradle  opensesame.publishing.gradle  opensesame.testing.gradle
build-logic/src/main/groovy/dev/lukebemish/opensesame/convention/: FabricModJson.groovy
buildSrc/: build.gradle
buildSrc/src/main/groovy/: opensesame.conventions.gradle  opensesame.publishing.gradle  opensesame.testing.gradle
buildSrc/src/main/groovy/dev/lukebemish/opensesame/convention/: Bundler.groovy  FabricModJson.groovy  JavadocComponent.groovy
compile/: build.gradle
compile/src/main/java/: module-info.java
compile/src/main/java/dev/lukebemish/opensesame/compile/: ConDynUtils.java  Opcodes.java  OpenProcessor.java  OpenSesameGenerated.java  Processor.java  TypeProvider.java  package-info.java
core/: build.gradle
core/src/java22/java/dev/lukebemish/opensesame/runtime/: LookupProviderFFI.java
core/src/main/java/: module-info.java
core/src/main/java/dev/lukebemish/opensesame/annotations/: Coerce.java  Open.java  package-info.java
core/src/main/java/dev/lukebemish/opensesame/runtime/: ClassCreatorUtils.java  Extension.java  LayeredServiceLoader.java  LookupProvider.java  LookupProviderFFI.java  LookupProviderFallback.java  LookupProviderNative.java  LookupProviderUnsafe.java  ManualAllocation.java  ManualAllocationUtil.java  MinimalConDynUtils.java  OpeningException.java  OpeningMetafactory.java  ProxyUtil.java  (+2 more)
cpp/: BUILD.bazel
cpp/src/: implementations.cpp
fabric/: build.gradle
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
groovy/: build.gradle
groovy/src/main/java/: module-info.java
groovy/src/test/java/: module-info.java
java/: BUILD.bazel
java/src/dev/lukebemish/opensesame/runtime/: NativeImplementations.java
javac/: build.gradle
javac/src/main/java/: module-info.java
mixin/: build.gradle
mixin/src/main/resources/: fabric.mod.json  mixin.opensesame.json  opensesame.mixin.json
natives/: build.gradle
natives/src/main/java/: module-info.java
opensesame-runtime/: build.gradle
opensesame-transform/: build.gradle
opensesame-transform/src/main/groovy/dev/lukebemish/opensesame/: Coerce.groovy  Open.groovy  OpenClass.groovy  Opener.groovy
platform/: BUILD.bazel
plugin/: build.gradle
plugin/core/: build.gradle
plugin/loom/: build.gradle
runtime/: build.gradle
runtime/src/main/java/: module-info.java
src/: dev_lukebemish_opensesame_natives_NativeImplementations.h  opensesamenative.c
src/cpp/: dev_lukebemish_opensesame_runtime_NativeImplementations.h  opensesamenative.cpp
src/main/groovy/dev/lukebemish/opensesame/: OpenSesame.groovy
src/main/groovy/dev/lukebemish/opensesame/runtime/: OpeningMetafactory.java  RuntimeRemapper.java
src/main/groovy/dev/lukebemish/opensesame/transform/: OpenSesameASTTransformation.groovy  OpenSesameBeforeCheckingTransformation.groovy  OpenSesameWriterTransformation.groovy  OpenedTypeCheckingExtension.groovy  package-info.java
src/test/groovy/dev/lukebemish/opensesame/test/: TestAccess.groovy  TestOpen.groovy  TestOpenClass.groovy  TestOpener.groovy  TestPrivate.java  TestPrivateCtor.java
testplugin/: build.gradle  settings.gradle
testplugin/javac/: build.gradle
testplugin/loom/: build.gradle
testplugin/loom/exec/: build.gradle
testplugin/loom/exec-intermediary/: build.gradle
testplugin/loom/exec-named/: build.gradle
testplugin/loom/testmod/: build.gradle
testplugin/loom/testmod/src/main/resources/: fabric.mod.json
testtargets/: build.gradle
testtargets/src/main/java/: module-info.java
testtargets/src/metafactoryTest/java/: module-info.java
toolchains/: linux-aarch64.cmake  linux-arm.cmake  linux-i386.cmake  linux-x86_64.cmake  macos-aarch64.cmake  macos-x86_64.cmake  windows-aarch64.cmake  windows-i386.cmake  windows-x86_64.cmake
transform/src/main/groovy/dev/lukebemish/opensesame/: Open.groovy
(+187 files in other folders)
