package(default_visibility = ["//visibility:public"])

load("@rules_jni//jni:defs.bzl", "jni_headers")

jni_headers(
    name = "jni-headers",
    lib = "//java:opensesamenatives",
)

cc_library(
    name = "jni-lib",
    srcs = glob(["src/**/*.cpp"]),
    hdrs = [":jni-headers"],
    deps = [":jni-headers"],
    alwayslink = True,
)

cc_binary(
    name = "opensesamenatives",
    linkshared = True,
    linkstatic = True,
    deps = [":jni-lib"],
)
